{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 33,
  "lineage": "8b7b1928-9d01-a182-258a-1803e71b51c1",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "k8s_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-agent-lb/frontendIPConfigurations/k8s-agent-pip",
                "load_balancer_rules": [
                  "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-agent-lb/loadBalancingRules/k8s-agent-lb-r"
                ],
                "name": "k8s-agent-pip",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/publicIPAddresses/k8s-agent-pip"
              }
            ],
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-agent-lb",
            "location": "westus2",
            "name": "k8s-agent-lb",
            "resource_group_name": "k8s-infra",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_public_ip.k8s_apip",
            "azurerm_resource_group.k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "k8s_mlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-master-lb/frontendIPConfigurations/k8s-master-pip",
                "load_balancer_rules": [
                  "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-master-lb/loadBalancingRules/k8s-master-lb-r"
                ],
                "name": "k8s-master-pip",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/publicIPAddresses/k8s-master-pip"
              }
            ],
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-master-lb",
            "location": "westus2",
            "name": "k8s-master-lb",
            "resource_group_name": "k8s-infra",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_public_ip.k8s_mpip",
            "azurerm_resource_group.k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "k8s_alb_bep",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Compute/virtualMachineScaleSets/k8s-agent/virtualMachines/0/networkInterfaces/k8s-agent-np/ipConfigurations/k8s-agent-ic"
            ],
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-agent-lb/backendAddressPools/k8s-agent-lb-bep",
            "loadbalancer_id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-agent-lb",
            "name": "k8s-agent-lb-bep",
            "resource_group_name": "k8s-infra"
          },
          "dependencies": [
            "azurerm_lb.k8s_alb",
            "azurerm_public_ip.k8s_apip",
            "azurerm_resource_group.k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "k8s_mlb_bep",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Compute/virtualMachineScaleSets/k8s-master/virtualMachines/0/networkInterfaces/k8s-master-np/ipConfigurations/k8s-master-ic"
            ],
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-master-lb/backendAddressPools/k8s-master-lb-bep",
            "loadbalancer_id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-master-lb",
            "name": "k8s-master-lb-bep",
            "resource_group_name": "k8s-infra"
          },
          "dependencies": [
            "azurerm_lb.k8s_mlb",
            "azurerm_public_ip.k8s_mpip",
            "azurerm_resource_group.k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "k8s_alb_p",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-agent-lb/probes/k8s_agent-lb-p",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-agent-lb",
            "name": "k8s_agent-lb-p",
            "number_of_probes": 2,
            "port": 6443,
            "protocol": "Tcp",
            "resource_group_name": "k8s-infra"
          },
          "dependencies": [
            "azurerm_lb.k8s_alb",
            "azurerm_public_ip.k8s_apip",
            "azurerm_resource_group.k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "k8s_mlb_p",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-master-lb/probes/k8s-master-lb-p",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-master-lb",
            "name": "k8s-master-lb-p",
            "number_of_probes": 2,
            "port": 6443,
            "protocol": "Tcp",
            "resource_group_name": "k8s-infra"
          },
          "dependencies": [
            "azurerm_lb.k8s_mlb",
            "azurerm_public_ip.k8s_mpip",
            "azurerm_resource_group.k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "k8s_lbr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 6443,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-agent-lb/frontendIPConfigurations/k8s-agent-pip",
            "frontend_ip_configuration_name": "k8s-agent-pip",
            "frontend_port": 443,
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-agent-lb/loadBalancingRules/k8s-agent-lb-r",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-agent-lb",
            "name": "k8s-agent-lb-r",
            "protocol": "Tcp",
            "resource_group_name": "k8s-infra"
          },
          "dependencies": [
            "azurerm_lb.k8s_alb",
            "azurerm_public_ip.k8s_apip",
            "azurerm_resource_group.k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "k8s_mlb_r",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 6443,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-master-lb/frontendIPConfigurations/k8s-master-pip",
            "frontend_ip_configuration_name": "k8s-master-pip",
            "frontend_port": 443,
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-master-lb/loadBalancingRules/k8s-master-lb-r",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/loadBalancers/k8s-master-lb",
            "name": "k8s-master-lb-r",
            "protocol": "Tcp",
            "resource_group_name": "k8s-infra"
          },
          "dependencies": [
            "azurerm_lb.k8s_mlb",
            "azurerm_resource_group.k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "k8s_baston_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/networkInterfaces/k8s-baston-nic",
            "ip_configuration": [
              {
                "name": "public",
                "primary": true,
                "private_ip_address": "172.15.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/publicIPAddresses/k8s_baston-pip",
                "subnet_id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-bsubnet"
              }
            ],
            "location": "westus2",
            "mac_address": "00-0D-3A-6E-37-34",
            "name": "k8s-baston-nic",
            "private_ip_address": "172.15.0.4",
            "private_ip_addresses": [
              "172.15.0.4"
            ],
            "resource_group_name": "k8s-infra",
            "virtual_machine_id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Compute/virtualMachines/k8s-baston"
          },
          "dependencies": [
            "azurerm_public_ip.k8s_bpip",
            "azurerm_resource_group.k8s_infra",
            "azurerm_subnet.k8s_bsubnet",
            "azurerm_virtual_network.k8s_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "k8s_ansg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/networkSecurityGroups/k8s-agent-nsg",
            "location": "westus2",
            "name": "k8s-agent-nsg",
            "resource_group_name": "k8s-infra",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "k8s_bnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/networkSecurityGroups/k8s-baston-nsg",
            "location": "westus2",
            "name": "k8s-baston-nsg",
            "resource_group_name": "k8s-infra",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "k8s_mnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/networkSecurityGroups/k8s-master-nsg",
            "location": "westus2",
            "name": "k8s-master-nsg",
            "resource_group_name": "k8s-infra",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "apiserver",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "k8s_apip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "k8s-apip",
            "fqdn": "k8s-apip.westus2.cloudapp.azure.com",
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/publicIPAddresses/k8s-agent-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.190.35.112",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "k8s-agent-pip",
            "resource_group_name": "k8s-infra",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "k8s_bpip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "k8s-baston-pip",
            "fqdn": "k8s-baston-pip.westus2.cloudapp.azure.com",
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/publicIPAddresses/k8s_baston-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.190.35.123",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "k8s_baston-pip",
            "resource_group_name": "k8s-infra",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "k8s_mpip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "k8s-master-pip",
            "fqdn": "k8s-master-pip.westus2.cloudapp.azure.com",
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/publicIPAddresses/k8s-master-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.190.35.110",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "k8s-master-pip",
            "resource_group_name": "k8s-infra",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "k8s_asubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.17.0.0/16",
            "address_prefixes": [
              "172.17.0.0/16"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-agent-subnet",
            "name": "k8s-agent-subnet",
            "resource_group_name": "k8s-infra",
            "virtual_network_name": "k8s-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.k8s_infra",
            "azurerm_virtual_network.k8s_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "k8s_bsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.15.0.0/16",
            "address_prefixes": [
              "172.15.0.0/16"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-bsubnet",
            "name": "k8s-bsubnet",
            "resource_group_name": "k8s-infra",
            "virtual_network_name": "k8s-vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "k8s_msubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.16.0.0/16",
            "address_prefixes": [
              "172.16.0.0/16"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-master-subnet",
            "name": "k8s-master-subnet",
            "resource_group_name": "k8s-infra",
            "virtual_network_name": "k8s-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.k8s_infra",
            "azurerm_virtual_network.k8s_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "k8s_asubnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-agent-subnet",
            "network_security_group_id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/networkSecurityGroups/k8s-agent-nsg",
            "subnet_id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-agent-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.k8s_ansg",
            "azurerm_resource_group.k8s_infra",
            "azurerm_subnet.k8s_asubnet",
            "azurerm_virtual_network.k8s_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "k8s_msubnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-master-subnet",
            "network_security_group_id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/networkSecurityGroups/k8s-master-nsg",
            "subnet_id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-master-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.k8s_mnsg",
            "azurerm_resource_group.k8s_infra",
            "azurerm_subnet.k8s_msubnet",
            "azurerm_virtual_network.k8s_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "k8s_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.15.0.0/16",
              "172.16.0.0/16",
              "172.17.0.0/16"
            ],
            "guid": "a8bff618-c2ca-4aa6-a5cb-a74d05208333",
            "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/virtualNetworks/k8s-vnet",
            "location": "westus2",
            "name": "k8s-vnet",
            "resource_group_name": "k8s-infra",
            "subnet": [
              {
                "address_prefix": "172.15.0.0/16",
                "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-bsubnet",
                "name": "k8s-bsubnet",
                "security_group": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/networkSecurityGroups/k8s-baston-nsg"
              },
              {
                "address_prefix": "172.16.0.0/16",
                "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-master-subnet",
                "name": "k8s-master-subnet",
                "security_group": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/networkSecurityGroups/k8s-master-nsg"
              },
              {
                "address_prefix": "172.17.0.0/16",
                "id": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/virtualNetworks/k8s-vnet/subnets/k8s-agent-subnet",
                "name": "k8s-agent-subnet",
                "security_group": "/subscriptions/886ee2a4-e790-43c5-bfa4-5c8db2e433f6/resourceGroups/k8s-infra/providers/Microsoft.Network/networkSecurityGroups/k8s-agent-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.k8s_infra"
          ]
        }
      ]
    }
  ]
}